--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
+    "@angular/cdk": "^12.2.1",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
@@ -18,6 +19,8 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "bootstrap-icons": "^1.5.0",
+    "jquery": "^3.6.0",
     "ng-qrcode": "^5.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.1",
