--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
     "ng-qrcode": "^5.0.0",
