--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.0",
     "bootstrap-icons": "^1.5.0",
+    "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
     "ng-qrcode": "^5.0.0",
     "primeicons": "^4.1.0",
