--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/primeicons/primeicons.css",
               "node_modules/chart.js/dist/Chart.js",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/animate.css/animate.min.css"
